--- a/Scheduler.Application/public/index.html
+++ b/Scheduler.Application/public/index.html
@@ -1,61 +1,1 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>This is Test API App</title>
-
-    <!--JS reference files-->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js" type="text/javascript"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="Scripts/test.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="Styles/site.css" />
-</head>
-<body ng-app="schedulerConfigApp" ng-controller="lookupCtrl" ng-cloak>
-    <h1 id="title">Scheduler Enum Value Configuration</h1>
-    <div class="container-fluid">
-        <div class="row" ng-repeat="configItem in configItems">
-            <div class="row bg-primary accordion">
-                <h5 class="pull-left accordion-title">{{configItem.getName()}}</h5>
-                <a class="btn pull-right vertical-center" role="button" ng-click="accordionClickHandler(configItem)">
-                    <!--<span class="caret accordion-caret-down"></span>-->
-
-                    <span class="glyphicon glyphicon-triangle-bottom accordion-caret" ng-hide="configItem.accordionBodyVisible"></span>
-                    <span class="glyphicon glyphicon-triangle-top accordion-caret" ng-show="configItem.accordionBodyVisible"></span>
-                </a>
-                <!--<input type="button" class="btn caret pull-right" />-->
-            </div>
-            <div class="bs-callout bs-callout-primary" ng-show="configItem.accordionBodyVisible">
-                <!--This is div to hold header-->
-                <div class="row">
-                    <div class="col-sm-2"></div>
-                    <label class="col-sm-2 control-label">DB Name</label>
-                    <div class="col-sm-6">Display Name</div>
-                    <div class="col-sm-2"></div>
-                </div>
-                <!--This div is to hold add new row-->
-                <div class="row">
-                    <div class="col-sm-2">Add New:</div>
-                    <label class="col-sm-2 control-label"></label>
-                    <input type="text" class="col-sm-6"
-                           placeholder="Display Name" value="">
-                    <div class="col-sm-2"></div>
-                    <!--<div class="input-group-addon">accident</div>-->
-                </div>
-                <!--This is the row to display exiting row with ng-repeat-->
-                <div class="row" ng-repeat="item in configItem.Children">
-                    <div class="col-sm-2"></div>
-                    <label class="col-sm-2 control-label">{{item.Name}}</label>
-                    <input type="text" class="col-sm-6"
-                           placeholder="Display Name" value="{{item.Value}}">
-                    <div class="col-sm-2"></div>
-                    <!--<div class="input-group-addon">accident</div>-->
-                </div>
-                <!--This to set data for {{configItem.getName()}}-->
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>SchedulerAdmin</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.805a29ae203eb6806867.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.ae9377b7ac0dec468393.bundle.js"></script><script type="text/javascript" src="polyfills.e443f0ea304329ec4053.bundle.js"></script><script type="text/javascript" src="vendor.ff8aebbe5b5fdd06a8ce.bundle.js"></script><script type="text/javascript" src="main.7b9808cbc4c8f4aaae84.bundle.js"></script></body></html>
